[package]
name = "pools_relieve_sqlserver"
version = "0.1.0"
edition = "2024"

[dependencies]
bb8 = "0.9.0"
bb8-tiberius = "0.16.0"
tiberius = "0.12.3"
tokio = { version = "1.39.2",features = [
    "rt-multi-thread",
    "net",
    "macros",
] }
tokio-util = {version = "0.7.11",features = ["compat"]}
anyhow = "1.0.0"